[gd_scene load_steps=20 format=2]

[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=3]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=4]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=5]
[ext_resource path="res://fsm/states/chase.gd" type="Script" id=6]
[ext_resource path="res://entities/enemies/mimic_bin.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/mimic_bin.png" type="Texture" id=8]
[ext_resource path="res://pieces/wall_detector.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 18, 9.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 28 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16, 9 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 32, 28 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 18 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attacc0"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=13]
resource_name = "attacc1"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "run"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="mimic_bin" type="KinematicBody2D"]
script = ExtResource( 7 )
flip_path = NodePath("flippable")
acceleration = 3000.0
speed = 220.0
jump_speed = 270.0
max_hp = 5.0
saving_enabled = false

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="hurtbox0" parent="flippable" instance=ExtResource( 1 )]
knockback = Vector2( 100, -400 )

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/hurtbox0"]
visible = false
polygon = PoolVector2Array( 39, -58, 46, -29, 45, -4, 12, -10, 12, -18, 17, -44, 28, -57 )

[node name="hurtbox1" parent="flippable" instance=ExtResource( 1 )]
knockback = Vector2( 100, -400 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/hurtbox1"]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 12 )

[node name="entity_detector0" parent="flippable" instance=ExtResource( 5 )]
position = Vector2( 32, -24 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector0"]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 10 )

[node name="entity_detector1" parent="flippable" instance=ExtResource( 5 )]
position = Vector2( 32, -24 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector1"]
visible = false
position = Vector2( -32, 23 )
shape = SubResource( 14 )

[node name="wall_detector" parent="flippable" instance=ExtResource( 9 )]
position = Vector2( 48, -24 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/wall_detector"]
position = Vector2( 0, -4 )
shape = SubResource( 11 )

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
position = Vector2( 0, -24 )
texture = ExtResource( 8 )
hframes = 8
vframes = 3

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -18 )
shape = SubResource( 1 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 3 )
anims/attacc0 = SubResource( 4 )
anims/attacc1 = SubResource( 13 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 9 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="hidden" type="Node" parent="fsm"]
script = ExtResource( 3 )
animation = "RESET"

[node name="chase" type="Node" parent="fsm"]
script = ExtResource( 6 )
animation = "run"

[node name="attacc0" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "attacc0"
auto_proceed = "chase"

[node name="attacc1" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "attacc1"
auto_proceed = "chase"

[connection signal="activated" from="flippable/entity_detector0" to="." method="_on_entity_detector0_activated"]
[connection signal="activated" from="flippable/entity_detector1" to="." method="_on_entity_detector1_activated"]
[connection signal="entered" from="fsm/attacc0" to="." method="perform_attacc0"]
[connection signal="entered" from="fsm/attacc1" to="." method="perform_attacc1"]
